# bgt

./: .gitignore  .isort.cfg  PutQuery.json  PutQuery1.json  PutQuery10.json  PutQuery11.json  PutQuery12.json  PutQuery13.json  PutQuery14.json  PutQuery15.json  PutQuery16.json  PutQuery17.json  PutQuery18.json  PutQuery19.json  PutQuery2.json  PutQuery20.json  PutQuery21.json  PutQuery22.json  PutQuery23.json  PutQuery24.json  PutQuery25.json  PutQuery26.json  PutQuery27.json  PutQuery28.json  PutQuery29.json  PutQuery3.json  PutQuery30.json  PutQuery31.json  PutQuery4.json  PutQuery5.json  PutQuery6.json  PutQuery7.json  PutQuery8.json  PutQuery9.json  README.md  _dbsetup.py  designers.json  games.json  games_table_schema.json  mypy.ini  (+3 more)
.mypy_cache/3.8/: _ast.data.json  _ast.meta.json  _csv.data.json  _csv.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  _random.data.json  _random.meta.json  _thread.data.json  _thread.meta.json  abc.data.json  abc.meta.json  array.data.json  array.meta.json  ast.data.json  ast.meta.json  base64.data.json  base64.meta.json  (+90 more)
app/: __init__.py  _main.py  _version.py  main.py  questions.py  schema.py  utils.py
bgt/: __init__.py  _main.py  _version.py  buildAWSquery.py  collection.csv  datatypes.py  gameTableScheme.json  game_mechanics.py  get_games.py  instance.py  question_selector.py  questions.py  schema.py  utils.py
bgt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  games_test_data.json  games_to_put.json  outside_game.json  test_bgt.py  test_mechanics.py  test_routes.py
(+317 files in other folders)
